# pydoctor-cli

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  commands.md  contributing.md
pydoctor/: __init__.py
pydoctor/analysis/: __init__.py  health_score.py
pydoctor/cache/: __init__.py  cache_manager.py
pydoctor/cli/: __init__.py  main.py
pydoctor/config/: __init__.py  settings.py
pydoctor/core/: __init__.py  analyzer.py  project.py  report.py
pydoctor/performance/: __init__.py  executor.py  parallel.py
pydoctor/reports/: __init__.py  json_formatter.py  table_formatter.py  terminal_colors.py
pydoctor/scanners/: __init__.py  ci_scanner.py  dependency_scanner.py  env_scanner.py  outdated_package_scanner.py  unused_package_scanner.py  vulnerability_scanner.py
pydoctor/security/: __init__.py  osv_client.py
pydoctor/utils/: __init__.py  file_utils.py  parser_utils.py  pip_utils.py  subprocess_utils.py
scripts/: install.sh
tests/: conftest.py  test_ci_scanner.py  test_cli_ux.py  test_dependency_scanner.py  test_env_scanner.py  test_unused_scanner.py  test_vulnerability_scanner.py
