[build-system]
requires      = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "pydoctor-cli"
version     = "0.1.3"
description = "Premium Python environment diagnostic CLI — your project's personal physician."
readme      = "README.md"
license     = { file = "LICENSE" }
authors     = [
    { name = "Favour Bamgboye", email = "demiladebamgboye@gmail.com" }
]
maintainers = [
    { name = "Favour Bamgboye", email = "demiladebamgboye@gmail.com" }
]
requires-python = ">=3.10"
keywords = [
    "pydoctor", "diagnosis", "dependency-checker", "vulnerability-scanner",
    "python-health", "cli-tool", "security-audit", "static-analysis"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Installation/Setup",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
    "Typing :: Typed",
]

dependencies = [
    "typer>=0.12",
    "rich>=13",
    "requests>=2.28",
    "packaging>=23",
    "pipdeptree>=2.5",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff",
    "black",
    "mypy",
    "types-requests",
    "build",
    "twine",
]

[project.scripts]
pydoctor = "pydoctor.cli.main:main"

[project.urls]
"Homepage"      = "https://pydoctor.vercel.app"
"Repository"    = "https://github.com/iamAgbaCoder/pydoctor-cli"
"Documentation" = "https://github.com/iamAgbaCoder/pydoctor-cli#readme"
"Bug Tracker"   = "https://github.com/iamAgbaCoder/pydoctor-cli/issues"
"Changelog"     = "https://github.com/iamAgbaCoder/pydoctor-cli/releases"

# ──────────────────────────────────────────────────────────────
# Tool configs
# ──────────────────────────────────────────────────────────────

[tool.pydoctor]
# Packages to ignore during unused dependency scanning
ignored_packages = [
    "pydoctor-cli",
    "setuptools",
    "wheel",
    "twine",
    "build",
    "ruff",
    "mypy",
    "black",
    "pytest",
    "pytest-cov",
    "colorama",
    "docutils",
    "types-requests",
    "pipdeptree",
]
# Minimum health score to pass CI (0-100)
min_health_score = 40


[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C90"]
ignore = ["E501"]

[tool.black]
line-length    = 100
target-version = ["py310", "py311"]

[tool.mypy]
python_version         = "3.11"
strict                 = false
ignore_missing_imports = true
warn_unused_ignores    = true

[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["pydoctor"]
omit   = ["tests/*", "setup.py"]